add PUT /schedule endpoint
