# server/ulmapi/dto/user_info.py
@@ -7,11 +7,9 @@ from typing import List, Dict  # noqa: F401
 
 from ulmapi.dto.base_model_ import Model
 from ulmapi.dto.course_info import CourseInfo
-from ulmapi.dto.user_info_current_schedule import UserInfoCurrentSchedule
 from ulmapi import util
 
 from ulmapi.dto.course_info import CourseInfo  # noqa: E501
-from ulmapi.dto.user_info_current_schedule import UserInfoCurrentSchedule  # noqa: E501
 
 class UserInfo(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -23,7 +21,7 @@ class UserInfo(Model):
         """UserInfo - a model defined in OpenAPI
 
         :param current_schedule: The current_schedule of this UserInfo.  # noqa: E501
-        :type current_schedule: UserInfoCurrentSchedule
+        :type current_schedule: CourseInfo
         :param time_recorded: The time_recorded of this UserInfo.  # noqa: E501
         :type time_recorded: Dict[str, float]
         :param username: The username of this UserInfo.  # noqa: E501
@@ -36,7 +34,7 @@ class UserInfo(Model):
         :type courses: Dict[str, CourseInfo]
         """
         self.openapi_types = {
-            'current_schedule': UserInfoCurrentSchedule,
+            'current_schedule': CourseInfo,
             'time_recorded': Dict[str, float],
             'username': str,
             'email': str,
@@ -77,7 +75,7 @@ class UserInfo(Model):
 
 
         :return: The current_schedule of this UserInfo.
-        :rtype: UserInfoCurrentSchedule
+        :rtype: CourseInfo
         """
         return self._current_schedule
 
@@ -87,7 +85,7 @@ class UserInfo(Model):
 
 
         :param current_schedule: The current_schedule of this UserInfo.
-        :type current_schedule: UserInfoCurrentSchedule
+        :type current_schedule: CourseInfo
         """
 
         self._current_schedule = current_schedule
