# server/ulmapi/schedule/validator.py
@@ -1,0 +1,4 @@
+def is_valid_schedule_info(schedule_info):
+    # if schedule_info.starts_at >= schedule_info.ends_at:
+    #
+    return True
